<?xml version="1.0" encoding="utf-8"?>
<!--
The iRemember source code (henceforth referred to as "iRemember") is
copyrighted by Mike Walker, Adam Porter, Doug Schmidt, and Jules White
at Vanderbilt University and the University of Maryland, Copyright (c)
2014, all rights reserved.  Since iRemember is open-source, freely
available software, you are free to use, modify, copy, and
distribute -perpetually and irrevocably- the source code and object code
produced from the source, as well as copy and distribute modified
versions of this software. You must, however, include this copyright
statement along with any code built using iRemember that you release. No
copyright statement needs to be provided if you just ship binary
executables of your software products.

You can use iRemember software in commercial and/or binary software
releases and are under no obligation to redistribute any of your source
code that is built using the software. Note, however, that you may not
misappropriate the iRemember code, such as copyrighting it yourself or
claiming authorship of the iRemember software code, in a way that will
prevent the software from being distributed freely using an open-source
development model. You needn't inform anyone that you're using iRemember
software in your software, though we encourage you to let us know so we
can promote your project in our success stories.

iRemember is provided as is with no warranties of any kind, including
the warranties of design, merchantability, and fitness for a particular
purpose, noninfringement, or arising from a course of dealing, usage or
trade practice.  Vanderbilt University and University of Maryland, their
employees, and students shall have no liability with respect to the
infringement of copyrights, trade secrets or any patents by DOC software
or any part thereof.  Moreover, in no event will Vanderbilt University,
University of Maryland, their employees, or students be liable for any
lost revenue or profits or other special, indirect and consequential
damages.

iRemember is provided with no support and without any obligation on the
part of Vanderbilt University and University of Maryland, their
employees, or students to assist in its use, correction, modification,
or enhancement.

The names Vanderbilt University and University of Maryland may not be
used to endorse or promote products or services derived from this source
without express written permission from Vanderbilt University or
University of Maryland. This license grants no permission to call
products or services derived from the iRemember source, nor does it
grant permission for the name Vanderbilt University or
University of Maryland to appear in their names.-->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/StoryEditRelativeLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="55dp" >

        <RelativeLayout
            android:id="@+id/StoryEditRelativeLayoutScrollable"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <!-- login_id label/value pair -->

            <TextView
                android:id="@+id/story_edit_login_id_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/story_edit_login_id"
                android:layout_alignBottom="@+id/story_edit_login_id"
                android:layout_alignParentLeft="true"
                android:text="@string/story_edit_label_login_id"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/story_edit_login_id"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:hint="@string/story_edit_default_value_login_id" />

            <!-- story_id label/value pair -->

            <TextView
                android:id="@+id/story_edit_story_id_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/story_edit_story_id"
                android:layout_alignBottom="@+id/story_edit_story_id"
                android:layout_alignParentLeft="true"
                android:text="@string/story_edit_label_story_id"
                android:textAppearance="?android:attr/textAppearanceMedium" 
                android:visibility="gone"/>

            <TextView
                android:id="@+id/story_edit_story_id"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/story_edit_login_id"
                android:hint="@string/story_edit_default_value_story_id"
                android:inputType="none" 
                android:visibility="gone"/>

            <!-- title label/value pair -->

            <TextView
                android:id="@+id/story_edit_title_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/story_edit_title"
                android:layout_alignBottom="@+id/story_edit_title"
                android:layout_alignParentLeft="true"
                android:text="@string/story_edit_label_title"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/story_edit_title"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/story_edit_login_id"
                android:hint="@string/story_edit_default_value_title" />

            <!-- body label/value pair -->

            <TextView
                android:id="@+id/story_edit_body_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/story_edit_body"
                android:layout_alignBottom="@+id/story_edit_body"
                android:layout_alignParentLeft="true"
                android:text="@string/story_edit_label_body"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/story_edit_body"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/story_edit_title"
                android:hint="@string/story_edit_default_value_body" />

            <!-- audio_link label/value pair -->

            <TextView
                android:id="@+id/story_edit_audio_link_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/story_edit_audio_link"
                android:layout_alignBottom="@+id/story_edit_audio_link"
                android:layout_alignParentLeft="true"
                android:text="@string/story_edit_label_audio_link"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:visibility="gone" />

            <EditText
                android:id="@+id/story_edit_audio_link"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/story_edit_body"
                android:hint="@string/story_edit_default_value_audio_link"
                android:visibility="gone" />

            <!-- video_link label/value pair -->

            <TextView
                android:id="@+id/story_edit_video_link_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/story_edit_video_link"
                android:layout_alignBottom="@+id/story_edit_video_link"
                android:layout_alignParentLeft="true"
                android:text="@string/story_edit_label_video_link"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:visibility="gone" />

            <EditText
                android:id="@+id/story_edit_video_link"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/story_edit_audio_link"
                android:hint="@string/story_edit_default_value_video_link"
                android:visibility="gone" />

            <!-- image_name label/value pair -->

            <TextView
                android:id="@+id/story_edit_image_name_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/story_edit_image_name"
                android:layout_alignBottom="@+id/story_edit_image_name"
                android:layout_alignParentLeft="true"
                android:text="@string/story_edit_label_image_name"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/story_edit_image_name"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/story_edit_video_link"
                android:hint="@string/story_edit_default_value_image_name" />

            <!-- image_meta_data label/value pair -->

            <TextView
                android:id="@+id/story_edit_image_meta_data_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/story_edit_image_meta_data"
                android:layout_alignBottom="@+id/story_edit_image_meta_data"
                android:layout_alignParentLeft="true"
                android:visibility="gone"
                android:text="@string/story_edit_label_image_meta_data"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/story_edit_image_meta_data"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:visibility="gone"
                android:layout_below="@+id/story_edit_image_name"
                android:hint="@string/story_edit_default_value_image_meta_data" />

            <!-- tags label/value pair -->

            <TextView
                android:id="@+id/story_edit_tags_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/story_edit_tags"
                android:layout_alignBottom="@+id/story_edit_tags"
                android:layout_alignParentLeft="true"
                android:text="@string/story_edit_label_tags"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/story_edit_tags"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/story_edit_image_meta_data"
                android:hint="@string/story_edit_default_value_tags" />

            <!-- creation_time label/value pair -->

            <TextView
                android:id="@+id/story_edit_creation_time_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/story_edit_creation_time"
                android:layout_alignBottom="@+id/story_edit_creation_time"
                android:layout_alignParentLeft="true"
                android:text="@string/story_edit_label_creation_time"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/story_edit_creation_time"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/story_edit_tags"
                android:hint="@string/story_edit_default_value_creation_time" />

            <!-- story_time label/value pair -->

            <TextView
                android:id="@+id/story_edit_story_time_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/story_edit_value_story_time_date_picker"
                android:layout_alignBottom="@+id/story_edit_value_story_time_date_picker"
                android:layout_alignParentLeft="true"
                android:text="@string/story_edit_label_story_time"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <DatePicker
                android:id="@+id/story_edit_value_story_time_date_picker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/story_edit_creation_time"
                android:layout_marginRight="20dp"
               />
            
<!--             <EditText -->
<!--                 android:id="@+id/story_edit_story_time" -->
<!--                 android:layout_width="150dp" -->
<!--                 android:layout_height="wrap_content" -->
<!--                 android:layout_alignParentRight="true" -->
<!--                 android:layout_below="@+id/story_edit_creation_time" -->
<!--                 android:hint="@string/story_edit_default_value_story_time" /> -->

            <!-- latitude label/value pair -->

            <TextView
                android:id="@+id/story_edit_latitude_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/story_edit_latitude"
                android:layout_alignBottom="@+id/story_edit_latitude"
                android:layout_alignParentLeft="true"
                android:text="@string/story_edit_label_latitude"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/story_edit_latitude"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/story_edit_value_story_time_date_picker"
                android:hint="@string/story_edit_default_value_latitude" />

            <!-- longitude label/value pair -->

            <TextView
                android:id="@+id/story_edit_longitude_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/story_edit_longitude"
                android:layout_alignBottom="@+id/story_edit_longitude"
                android:layout_alignParentLeft="true"
                android:text="@string/story_edit_label_longitude"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/story_edit_longitude"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/story_edit_latitude"
                android:hint="@string/story_edit_default_value_longitude" />
        </RelativeLayout>
    </ScrollView>

    <Button
        android:id="@+id/story_edit_button_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="32dp"
        android:onClick="clickListener"
        android:text="@string/story_edit_button_message_save" />

    <Button
        android:id="@+id/story_edit_button_reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/story_edit_button_save"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:onClick="clickListener"
        android:text="@string/story_edit_button_message_reset" />

    <Button
        android:id="@+id/story_edit_button_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginRight="21dp"
        android:onClick="clickListener"
        android:text="@string/story_edit_button_message_cancel" />

</RelativeLayout>